--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <script>
   const password = prompt("Enter password:");
-  if (password !== "1 2 M") {
+  if (password !== "121M") {
     document.documentElement.innerHTML = "";
     alert("Access denied");
     throw new Error("Access denied");
